--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/graphium
 spring.datasource.username=root
 spring.datasource.password=comsc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+security.ignored=/**
