--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=comsc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 security.ignored=/**
+
+spring.servlet.multipart.max-file-size = 4GB
+spring.servlet.multipart.max-request-size = 4GB
