--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ security.ignored=/**
 
 spring.servlet.multipart.max-file-size = 4GB
 spring.servlet.multipart.max-request-size = 4GB
+
+spring.devtools.restart.additional-paths = /resources
