--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ security.ignored=/**
 
 spring.servlet.multipart.max-file-size = 4GB
 spring.servlet.multipart.max-request-size = 4GB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=GraphiumFileShare@gmail.com
+spring.mail.password=efytkbfoamulavch
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
