--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,19 @@ security.ignored=/**
 spring.servlet.multipart.max-file-size = 4GB
 spring.servlet.multipart.max-request-size = 4GB
 
+
+spring.devtools.restart.additional-paths = /resources
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=GraphiumFileShare@gmail.com
 spring.mail.password=efytkbfoamulavch
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port=8443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/springboot.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=springboot
+server.ssl.enabled=true
