--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/graphium
 spring.datasource.username=root
-spring.datasource.password=comsc
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 security.ignored=/**
 
@@ -17,9 +17,9 @@ spring.mail.password=efytkbfoamulavch
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port=8443
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore/springboot.p12
-server.ssl.key-store-password=password
-server.ssl.key-alias=springboot
-server.ssl.enabled=true
+server.port=8080
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore/springboot.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-alias=springboot
+#server.ssl.enabled=true
